--- a/aula12ex/modelo.html
+++ b/aula12ex/modelo.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Horário do Dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Horário do dia</h1>
+        <h1>Hora do Dia</h1>
     </header>
     <section>
-        <div>
-            
+        <div id="msg">
+            Aqui é a mensagem
         </div>
-        <div>
-            
+        <div id="foto">
+            <img id="imagem" src="manha.png" alt="Foto do dia">
         </div>
     </section>
     <footer>
