--- a/aula12ex/modelo.html
+++ b/aula12ex/modelo.html
@@ -16,7 +16,7 @@
             Aqui é a mensagem
         </div>
         <div id="foto">
-            <img id="imagem" src="manha.png" alt="Foto do dia">
+            <img id="imagem">
         </div>
     </section>
     <footer>
