--- a/aula12ex/modelo.html
+++ b/aula12ex/modelo.html
@@ -15,7 +15,7 @@
         <div id="msg">
             Aqui é a mensagem
         </div>
-        <div id="foto">
+        <div id="">
             <img id="imagem">
         </div>
     </section>
