--- a/aula16/index.html
+++ b/aula16/index.html
@@ -5,18 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
     <title>É o contas</title>
 </head>
 <body>
     <header>
-
+        <h1>Lets go to contas ARIBA!</h1>
     </header>
     <section>
-
+        <div id="dados">
+            <p>Início: <input type="number" name="inicio" id="txti"></p>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <input type="button" value="Contar" onclick="contar()">
+        </div>
+        <div id="res">
+        </div>
     </section>
     <footer>
 
-    </footer>  
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
