--- a/aula16/index.html
+++ b/aula16/index.html
@@ -22,7 +22,7 @@
         </div>
     </section>
     <footer>
-
+        <p>&copy; Richão fogueteiro</p>
     </footer>
     <script src="script.js"></script>
 </body>
