--- a/aula17/index.html
+++ b/aula17/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>É o tabuas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="script.js">
-    <title>É o contas</title>
 </head>
 <body>
     <header>
-
+        <h1>Tropa do tabujhonson</h1>
     </header>
     <section>
-
+        <div>
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar tabuada" onclick="tabas()"></p>
+        </div>
+        <div>
+            <select name="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
+        </div>
     </section>
     <footer>
-
+        <p>&copy; Richones stora random</p>
     </footer>  
+    <script src="script.js"></script>
 </body>
 </html>
