--- a/aula19/index.html
+++ b/aula19/index.html
@@ -14,14 +14,13 @@
     <section>
         <div id="msg">
             <p>Número entre (1 a 100):</p>
-            <input type="number" id="num" name="txtnum">
-            <input type="submit" value="Adicionar" onclick="tabas()">
+            <input type="number" id="fnum" name="fnum">
+            <input type="button" value="Adicionar" onclick="adicionar()">
+            <br><select name="flista" id="flista" size="6"></select>
+            <br><input type="button" value="Finalizar">
         </div>
-        <div id="">
-            <select name="tabuada" id="seltab" size="7">
-                <option></option>
-            </select>
-            <input type="submit" value="Finalizar">
+        <div id="res">
+
         </div>
     </section>
     <footer>
